Fri Apr  5 00:13:41 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* TextConverters/RTF/GNUmakefile.preamble (ADDITIONAL_LIB_DIRS):
	Fixed typo so that it compiles again.

2002-04-03  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSRulerView.m
	Added handling for missing rint function, copied over from
	NSBrowser.
	* Source/NSTextView.m
	Made [updateRuler] save against missing rulers.
	
2002-04-02  Adam Fedor  <fedor@gnu.org>

	* Documentation/gsdoc/DefaultsSummary.gsdoc: Update.
	* Documentation/gsdoc/Gui.gsdoc: Idem.
	* Headers/gnustep/gui/NSAffineTransform.h: Tidy for autogsdoc.
	* Headers/gnustep/gui/NSButtonCell.h: Idem.
	* Headers/gnustep/gui/NSCell.h: Idem.
	* Headers/gnustep/gui/NSClipView.h: Idem.
	* Headers/gnustep/gui/NSFont.h: Idem.
	* Headers/gnustep/gui/NSFontManager.h: Idem.
	* Headers/gnustep/gui/NSOutlineView.h: Idem.
	* Headers/gnustep/gui/NSRulerView.h: Idem.
	* Headers/gnustep/gui/NSSavePanel.h: Idem.
	* Source/GSHbox.m: Idem.
	* Source/GSVbox.m: Idem.
	* Source/NSCachedImageRep.m: Idem.
	* Source/NSCell.m: Idem.
	* Source/NSClipView.m: Idem.
	* Source/NSDocument.m: Idem.
	* Source/NSFont.m: Idem.
	* Source/NSFontManager.m: Idem.
	* Source/NSFontPanel.m: Idem.
	* Source/NSFormCell.m: Idem.
	* Source/NSGraphicsContext.m: Idem.
	* Source/NSHelpManager.m: Idem.
	* Source/NSImage.m: Idem.
	* Source/NSPanel.m: Idem.
	* Source/NSRulerView.m: Idem.
	* Source/NSStepperCell.m: Idem.
	* Source/NSText.m: Idem.
	
2002-04-02  Adam Fedor  <fedor@gnu.org>

	* Source/NSGraphicsContext.m (-GSDefineGState): Document new
	definition of method.
	* Source/NSWindow.m ([NSWindow -_initBackendWindow:]): Change to
	match new def.	
	* Source/NSView.m ([NSView -lockFocusInRect:]): Idem.

2002-04-02  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSTableView.m ([NSTableView -scrollRowToVisible:]): 
	([NSTableView -scrollColumnToVisible:]): 
	Bugfix in getting the visibleRect.

Tue Apr  2 10:28:46 2002  Nicola Pero  <n.pero@mi.flashnet.it>
