@@ -1,3 +1,8 @@
+2002-04-06  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
+
+	* Source/NSOutlineView.m ([NSOutlineView -performDragOperation:]): 
+	Fixed issue on drag'n'drop.
+
 Fri Apr  5 00:13:41 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* TextConverters/RTF/GNUmakefile.preamble (ADDITIONAL_LIB_DIRS):
